--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
 
 		<!-- Web Fonts  -->
-		<link id="googleFonts" href="../../../css?family=Poppins:300,400,500,600,700,800%7CShadows+Into+Light&display=swap" rel="stylesheet" type="text/css">
-
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<!-- Vendor CSS -->
 		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
 		<link rel="stylesheet" href="vendor/animate/animate.compat.css">
 		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
-		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
-		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
 		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
 
 		<!-- Theme CSS -->
@@ -37,7 +34,11 @@
 
 		<!-- Skin CSS -->
 		<link id="skinCSS" rel="stylesheet" href="css/skins/default.css">
-
+<style>
+    *{
+ font-family: 'Roboto', sans-serif !important;
+    }
+</style>
 
 
 	</head>
@@ -57,16 +58,16 @@
                         <div class="tabs tabs-secondary">
                             <ul class="nav nav-tabs nav-justified flex-column flex-md-row">
                                 <li class="nav-item active">
-                                    <a class="nav-link active" href="#lang1" data-bs-toggle="tab">الفرنسية</a>
+                                    <a class="nav-link active" href="#lang1" data-bs-toggle="tab">Langue française</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#lang2" data-bs-toggle="tab">الهندية</a>
+                                    <a class="nav-link" href="#lang2" data-bs-toggle="tab">भारतीय भाषा</a>
                                 </li>
                                     <li class="nav-item ">
-                                        <a class="nav-link" href="#lang3" data-bs-toggle="tab">الفارسية</a>
+                                        <a class="nav-link" href="#lang3" data-bs-toggle="tab">فارسی</a>
                                     </li>
                                     <li class="nav-item ">
-                                        <a class="nav-link" href="#lang4" data-bs-toggle="tab">الصينية</a>
+                                        <a class="nav-link" href="#lang4" data-bs-toggle="tab">中文</a>
                                     </li>
                                        
                             </ul>
