--- a/index.html
+++ b/index.html
@@ -45,7 +45,79 @@
 	<body data-plugin-page-transition="">
 
 		<div class="body">
-			
+			<header id="header"
+				data-plugin-options="{'stickyEnabled': true, 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': false, 'stickyStartAt': 164, 'stickySetTop': '-164px', 'stickyChangeLogo': false}"
+				>
+				<div class="header-body border-0">
+					<div class="header-top header-top-default border-bottom-0 bg-color-primary">
+						<div class="container">
+							<div class="header-row py-2">
+								<div class="header-column justify-content-start">
+									<div class="header-row">
+										<nav class="header-nav-top">
+											<!-- <ul class="nav nav-pills text-uppercase text-2">
+												<li class="nav-item nav-item-anim-icon">
+													<a class="nav-link ps-0 text-light opacity-7" href="about-us.html"><i
+															class="fas fa-angle-right"></i> About Us</a>
+												</li>
+												<li class="nav-item nav-item-anim-icon">
+													<a class="nav-link text-light opacity-7 pe-0" href="contact-us.html"><i
+															class="fas fa-angle-right"></i> Contact Us</a>
+												</li>
+											</ul> -->
+										</nav>
+									</div>
+								</div>
+								<div class="header-column justify-content-end">
+									<div class="header-row">
+										<!-- <ul
+											class="header-social-icons social-icons d-none d-sm-block social-icons-clean social-icons-icon-light">
+											<li class="social-icons-facebook"><a href="https://www.facebook.com/" target="_blank"
+													title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+											<li class="social-icons-twitter"><a href="https://www.twitter.com/" target="_blank"
+													title="Twitter"><i class="fab fa-twitter"></i></a></li>
+											<li class="social-icons-linkedin"><a href="https://www.linkedin.com/" target="_blank"
+													title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+										</ul> -->
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="header-container container">
+						<div class="header-row py-3">
+							<div class="header-column justify-content-start w-50 order-md-1  d-md-flex">
+								<div class="header-row">
+									<div class="header-logo">
+										<a href="#">
+											<img alt="Porto" width="90%" src="imgs/1.png">
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="header-column justify-content-start justify-content-md-center order-1 order-md-2">
+								<div class="header-row">
+									<!-- <div class="header-logo">
+										<a href="index.html">
+											<img alt="Porto" width="100" height="48" src="img/logo-default-slim.png">
+										</a>
+									</div> -->
+								</div>
+							</div>
+							<div class="header-column justify-content-end w-50 order-2 order-md-3">
+								<div class="header-row">
+									<div class="header-logo">
+										<a href="#">
+											<img alt="Porto" width="90%" style="display: block;float: right;" src="imgs/2.png">
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				
+				</div>
+			</header>
 
 			<div role="main" class="main">
 
