--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>Tabs | Porto - Multipurpose Website Template</title>	
+		<title>Omranion</title>	
 
 		<meta name="keywords" content="WebSite Template">
 		<meta name="description" content="Porto - Multipurpose Website Template">
